--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,9 +72,11 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+section {
+  margin-top: 130px;
+}
 /* About Section Styles */
 .about {
-  margin-top: 130px;
   background: #fff8f3;
   border-radius: 10px;
   padding: 130px 150px;
@@ -101,4 +103,65 @@ td {
 tbody tr td {
   font-weight: 700;
   color: #474747;
+}
+/* What I Do Styles */
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+}
+.skill-title {
+  font-weight: 700;
+  font-size: 20px;
+  color: #181818;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skill-description {
+  color: #757575;
+}
+.what-i-do .section-description {
+  margin-top: 30px;
+  margin-bottom: 50px;
+  max-width: 910px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+/* Resume Styles */
+.resume .section-title {
+  margin-bottom: 113px;
+}
+.resume-content {
+  display: flex;
+  gap: 24px;
+}
+.reume-item {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.resume .title {
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+  margin-bottom: 10px;
+}
+.resume .sub-title {
+  color: #757575;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.resume .description {
+  color: #757575;
+}
+.resume-button {
+  margin-top: 50px;
+  text-align: center;
 }
