button and icons added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,6 +16,13 @@
   background: #fd6e0a;
   color: #ffffff;
 }
+.btn-secondary {
+  margin-left: 30px;
+  color: #fd6e0a;
+  border: 1px solid #fd6e0a;
+  border-radius: 5px;
+  background: #fff8f3;
+}
 .header {
   background: #fff8f3;
   background-image: url("../images/header_bg.png"),
